Fixing overflow behavior

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -17,16 +17,18 @@ $dashboard-sidebar-width: 160px;
     height: 100%;
     padding: $small-spacing 0;
   }
+
   .dashboard-content {
     // Vertical flex positioning for top and bottom sections
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: calc(100% - $dashboard-sidebar-width);
 
     .content-section {
       flex-grow: 1;
       padding: $medium-spacing;
-      height: 100%;
+      height: 50%;
+      overflow: scroll;
       position: relative;
 
       .subtitle {
